# yoyo

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  README.zh-CN.md  claude-3opt-test.go  go.mod  go.sum  install.sh
.github/workflows/: ci.yml  release.yml
auto-approve/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md
auto-approve/scripts/: install.ps1  install.sh
auto-approve/skills/bump-version/: skill.md
auto-approve/src/: agent.rs  cli.rs  main.rs  proxy.rs  proxy_state.rs  pty.rs  screen.rs  signal.rs  status_bar.rs  terminal.rs  unix_main.rs  win_main.rs  win_proxy.rs  win_pty.rs  win_terminal.rs
auto-approve/src/detector/: claude.rs  codex.rs  cursor.rs  mod.rs
cmd/yoyo/: env.go  help.go  main.go  main_test.go  resolve.go  resolve_test.go
internal/agent/: agent.go  agent_test.go
internal/config/: config.go  config_test.go  perms.go  perms_test.go
internal/detector/: claude.go  claude_3opt_test.go  claude_test.go  codex.go  codex_test.go  cursor.go  cursor_test.go  danger.go  danger_test.go  detector.go  fuzz_test.go  fuzzy.go  fuzzy_test.go  regexp_detector.go  regexp_detector_test.go
internal/dump/: dump.go  dump_test.go
internal/logger/: logger.go  logger_test.go
internal/memory/: memory.go  memory_test.go
internal/proxy/: kitty.go  kitty_test.go  proxy.go  proxy_e2e_test.go  proxy_kitty_e2e_test.go  proxy_sim_test.go  proxy_test.go  proxy_tmux_test.go
internal/screen/: fuzz_test.go  screen.go  screen_test.go
internal/statusbar/: statusbar.go  (+1 more)
python/: README.md  build_wheels.py
scripts/: release.sh
(+9 files in other folders)
